# ecommerce-store

./: README.md  next.config.ts  package-lock.json  package.json  prisma.config.ts  vercel.json
.spec/: constitution.md  plan.md
.spec/tasks/: 001-setup.md  002-layout-navbar-footer.md  003-homepage.md  004-product-pages.md  005-cart-and-auth.md  006-backend-chatbot.md  007-testing-polish.md  008-deployment.md
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/api/auth/[...nextauth]/: route.ts
app/api/auth/signup/: route.ts
app/cart/: page.tsx
app/login/: page.tsx
app/products/: page.tsx
app/products/[slug]/: AddToCartSection.tsx  page.tsx
app/signup/: page.tsx
backend/: ingest.py  main.py  pyproject.toml  requirements.txt
backend/api/: index.py
backend/data/: products.json
backend/routers/: chat.py
backend/services/: db_service.py  gemini_service.py  qdrant_service.py
components/: CartItem.tsx  ChatWidget.tsx  Footer.tsx  Navbar.tsx
lib/: cartContext.tsx
