[project]
name = "backend"
version = "0.1.0"
description = "TechNest RAG Chatbot Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "google-genai>=2.6.0",
]

